[package]
name = "rpcap"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = 'A Packet Capture Tool'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive"] }

[dependencies.pnet]
version = "0.29.0"